--- a/index.html
+++ b/index.html
@@ -10,7 +10,26 @@
 
 
 <body>
-    
-    
+    <!-- Title -->
+    <h1>Crystals Collector</h1>
+
+    <!-- Instructions for the game -->
+  <div class="container">
+
+    <P>You will give a random number at the start ofs the game.</P>
+    <p>There are four crystals below. By clicking on a crystal,
+      you will add a specific amount of points to your total score.</p>
+    <p>You win the game by matching your total score to the random
+      number generated.</p>
+    <p>You lose the game if your total score goes 
+        above the random number that was generated.</p>
+    <p>The value of each crystal is hidden from you until you
+      click on it.</p>
+    <p>Each time the game starts, the game will change the values
+      of each crystal.</p>
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="../unit-4-game/assets/javascript/game.js"></script>  
 </body>
 </html>
