add some jquery

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>unit-4-game</title>
+    <title>Crystals Collector</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -11,25 +11,39 @@
 
 <body>
     <!-- Title -->
-    <h1>Crystals Collector</h1>
+    <h1>Crystals Collector!</h1>
 
     <!-- Instructions for the game -->
   <div class="container">
-
-    <P>You will give a random number at the start ofs the game.</P>
-    <p>There are four crystals below. By clicking on a crystal,
+    
+    <P class="directions-text">You will give a random number at the start ofs the game.</P>
+    <p class="directions-text">There are four crystals below. By clicking on a crystal,
       you will add a specific amount of points to your total score.</p>
-    <p>You win the game by matching your total score to the random
+    <p class="directions-text">You win the game by matching your total score to the random
       number generated.</p>
-    <p>You lose the game if your total score goes 
+    <p class="directions-text">You lose the game if your total score goes 
         above the random number that was generated.</p>
-    <p>The value of each crystal is hidden from you until you
+    <p class="directions-text">The value of each crystal is hidden from you until you
       click on it.</p>
-    <p>Each time the game starts, the game will change the values
+    <p class="directions-text">Each time the game starts, the game will change the values
       of each crystal.</p>
   </div>
 
+  <!-- Counter of wins and losses -->
+ <div id="score-container">
+  <p id="wins-text">Wins: </p>
+  <p id="losses-text">Losses: </p>
+</div>
+
+  <!-- Random number to guess -->
+    <p id="random-number">Number to Guess</p>
+
+  <!-- Total Score -->
+  <p id="total-score">Your total score is: </p>
+
+  <!-- jQuery and JavaScript links -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="../unit-4-game/assets/javascript/game.js"></script>  
+  <script src="../unit-4-game/assets/javascript/game.js"></script>
+
 </body>
 </html>
