--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
   <!-- Crystals -->
   <div class="gems">
-    <input type="image" src="../unit-4-game/assets/images/gem1.jpg" alt="">
-    <input type="image" src="../unit-4-game/assets/images/gem2.jpg" alt="">
-    <input type="image" src="../unit-4-game/assets/images/gem3.jpg" alt="">
-    <input type="image" src="../unit-4-game/assets/images/gem5.jpg" alt="">
+    <input type="image" src="assets/images/gem1.jpg" alt="">
+    <input type="image" src="assets/images/gem2.jpg" alt="">
+    <input type="image" src="assets/images/gem3.jpg" alt="">
+    <input type="image" src="assets/images/gem5.jpg" alt="">
 
   </div>
 
@@ -53,7 +53,7 @@
 
   <!-- jQuery and JavaScript links -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="../unit-4-game/assets/javascript/game.js"></script>
+  <script src="assets/javascript/game.js"></script>
 
 </body>
 
