work on more jQuery and JavaScript

--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
 
   <!-- Counter of wins and losses -->
   <div id="score-container">
-    <p id="wins-text">Wins: </p>
+    <div id="wins-text">
+    <p >Wins: </p>
+  </div>
     <p id="losses-text">Losses: </p>
+    <div id="wins-losses-container"></div>
   </div>
 
   
