fix counter in HTML

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
 
   <!-- Counter of wins and losses -->
   <div id="score-container">
-    <div id="wins-text">
-    <p >Wins: </p>
-  </div>
-    <p id="losses-text">Losses: </p>
-    <div id="wins-losses-container"></div>
+    <h5>Wins: 
+      <span id="wins-text"></span>
+      <br>
+      Losses:
+      <span id="losses-text"></span>
+    </h5>
+
   </div>
 
   
