change background image and CSS

--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
                         </div>
                     </div>
                 </div>
+                <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <p>
+                        <p id="numberToGet">
                             Number to Get:
                         </p>
                         <div id="random-number"></div>
