fix ordered list

--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
                                   </li>
                                   <br>
                                     <li class="list-item">
-                                        You will give a random number at the start of the game.
+                                        1. You will give a random number at the start of the game.
                                     </li>
                                     <li class="list-item">
-                                        There are four crystals below. By clicking on a crystal,
+                                       2. There are four crystals below. By clicking on a crystal,
                                         you will add a specific amount of points to your total score.
                                     </li>
                                     <li class="list-item">
-                                        You win the game by matching your total score to the random
+                                        3. You win the game by matching your total score to the random
                                         number generated.
                                     </li>
                                     <li class="list-item">
-                                        You lose the game if your total score goes
+                                       4. You lose the game if your total score goes
                                         above the random number that was generated.
                                     </li>
                                     <li class="list-item">
-                                        The value of each crystal is hidden from you until you
+                                       5.  The value of each crystal is hidden from you until you
                                         click on it.
                                     </li>
                                     <li class="list-item">
-                                        Each time the game starts, the game will change the values
+                                        6. Each time the game starts, the game will change the values
                                         of each crystal.
                                     </li>
                                 </ol>
