--- a/index.html
+++ b/index.html
@@ -23,30 +23,30 @@
                               
                                 <ol>
                                   <li class="list-item">
-                                    Directions for the Game:
+                                  <strong>Directions for the Game:</strong>
                                   </li>
                                   <br>
                                     <li class="list-item">
-                                        1. You will give a random number at the start of the game.
+                                       <strong>1.</strong> You will give a random number at the start of the game.
                                     </li>
                                     <li class="list-item">
-                                       2. There are four crystals below. By clicking on a crystal,
+                                      <strong>2.</strong> There are four crystals below. By clicking on a crystal,
                                         you will add a specific amount of points to your total score.
                                     </li>
                                     <li class="list-item">
-                                        3. You win the game by matching your total score to the random
+                                      <strong>3.</strong> You win the game by matching your total score to the random
                                         number generated.
                                     </li>
                                     <li class="list-item">
-                                       4. You lose the game if your total score goes
+                                      <strong> 4.</strong> You lose the game if your total score goes
                                         above the random number that was generated.
                                     </li>
                                     <li class="list-item">
-                                       5.  The value of each crystal is hidden from you until you
+                                     <strong> 5.</strong>   The value of each crystal is hidden from you until you
                                         click on it.
                                     </li>
                                     <li class="list-item">
-                                        6. Each time the game starts, the game will change the values
+                                       <strong> 6. </strong> Each time the game starts, the game will change the values
                                         of each crystal.
                                     </li>
                                 </ol>
@@ -61,16 +61,17 @@
                 <div class="row">
                     <div class="col-md-6">
                         <p id="numberToGet">
-                            Number to Get:
+                         <strong>  Number to Get: </strong> 
                         </p>
                         <div id="random-number"></div>
                     </div>
                     <div class="col-md-6">
                         <p id="score-container">
-                            <h5>Wins: 
+                            <h5>
+                               <strong> Wins: </strong>
                                 <span id="wins-text"></span>
                                 <br>
-                                Losses:
+                               <strong> Losses: </strong>
                                 <span id="losses-text"></span>
                               </h5>
                         </p>
@@ -98,7 +99,7 @@
             <div class="col-md-6">
                 
                 <p id="box">
-                    You total score is:
+                  <strong>  You total score is: </strong>
                 </p>
                 <div id="total-score"></div>
         </div>
